# file-browser

./: .gitignore  README.md  filebrowser.db  main.py  pyproject.toml  requirements.txt  temp.py
data/: video_data.json  videostore.db
pages/: index.html  watch.html
src/: __init__.py  config.py  data_store.py  models.py  sessions.py
src/api/: __init__.py  exceptions.py  thumbnails.py  videos.py
src/utils/: helpers.py  video_processing.py
static/css/: index.css  main.css  plyr.css  style.css  watch.css
static/js/: index.js  main.js  plyr.js  watch.js
template/: base.html  index.html  watch.html
