[project]
name = "filebrowser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
